--- a/client/src/sass/components/_button.scss
+++ b/client/src/sass/components/_button.scss
@@ -1,3 +1,13 @@
 .btn {
-  
+  width: 10rem;
+  height: 3rem;
+
+  &-form {
+    @include centerAbs;
+    border: none;
+    border-radius: 5%;
+    color: #FFF;
+    background: darken($primary-lime, 15%);
+    box-shadow: 2px 2px 0.5rem rgba(0,0,0,0.3);
+  }
 }
