add navbar and footer with react router

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -3,6 +3,8 @@
 
 @import "components/button";
 @import "components/login";
+@import "components/navbar";
+@import "components/footer";
 
 *,
 *::before,
