--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,12 @@
     border: none;
     border-radius: 5%;
     color: #FFF;
-    background: #63d200;
-    box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3); }
+    background: linear-gradient(#89FF1F, #4b9f00);
+    box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+    margin: 1rem 0rem;
+    transition: all 0.3s; }
+    .btn-form:hover {
+      transform: translate(-50%, -0.5rem); }
 
 .App {
   background-color: #FFF;
@@ -52,7 +56,13 @@
       font-size: 1.5rem;
       color: #666666;
       display: block;
-      width: 100%; }
+      width: 100%;
+      border-bottom: 2px solid transparent; }
+      .App #simple-form input:focus {
+        outline: none;
+        border-bottom: 2px solid #CC3404; }
+      .App #simple-form input:focus:valid {
+        border-bottom: 2px solid #385DFF; }
     .App #simple-form:after {
       position: absolute;
       content: '';
@@ -62,6 +72,20 @@
       left: 0%;
       bottom: 0%;
       clip-path: polygon(0 0, 100% 33%, 100% 100%, 0% 100%); }
+
+.navbar {
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 5rem;
+  background-color: #000; }
+
+.footer {
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 5rem;
+  background-color: #000; }
 
 *,
 *::before,
