--- a/client/src/sass/components/_button.scss
+++ b/client/src/sass/components/_button.scss
@@ -7,7 +7,13 @@
     border: none;
     border-radius: 5%;
     color: #FFF;
-    background: darken($primary-lime, 15%);
+    background: linear-gradient($primary-lime, darken($primary-lime, 25%));
     box-shadow: 2px 2px 0.5rem rgba(0,0,0,0.3);
+    margin: 1rem 0rem;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: translate(-50%, -0.5rem);
+    }
   }
 }
