--- a/client/src/sass/components/_login.scss
+++ b/client/src/sass/components/_login.scss
@@ -49,6 +49,15 @@
       color: #666666;
       display: block;
       width: 100%;
+      border-bottom: 2px solid transparent;
+
+      &:focus {
+        outline: none;
+        border-bottom: 2px solid #CC3404;
+      }
+      &:focus:valid {
+        border-bottom: 2px solid #385DFF;
+      }
     }
 
     &:after {
