--- a/client/src/sass/components/_footer.scss
+++ b/client/src/sass/components/_footer.scss
@@ -3,5 +3,7 @@
   bottom: 0%;
   width: 100%;
   height: 5rem;
-  background-color: $black;
+  background: linear-gradient(10deg, darken($primary-dark, 25%), $primary-lime);
+  box-shadow: -2px -2px 2px rgba($black,0.3);
+  z-index: 10;
 }
