--- a/client/src/sass/components/_navbar.scss
+++ b/client/src/sass/components/_navbar.scss
@@ -3,5 +3,28 @@
   top: 0%;
   width: 100%;
   height: 5rem;
-  background-color: $black;
+  background: linear-gradient(10deg, darken($primary-dark, 25%), $primary-lime);
+  box-shadow: 2px 2px 2px rgba($black,0.3);
+  z-index: 10;
+
+  &-menu {
+    margin: 0 auto;
+    max-width: 100rem;
+    margin-top: 1.2rem;
+
+    a {
+      font-size: 1.5rem;
+      text-shadow: 2px 1px 2px rgba($black, 0.3);
+      margin-left: 2rem;
+
+      &:active {
+        color: inherit;
+      }
+    }
+
+    .float {
+      float: right;
+      margin-right: 2rem;
+    }
+  }
 }
