--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,10 +1,12 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
+@import "abstracts/animation";
 
 @import "components/button";
 @import "components/login";
 @import "components/navbar";
 @import "components/footer";
+@import "components/homepage";
 
 *,
 *::before,
@@ -12,6 +14,15 @@
     margin: 0px;
     padding: 0px;
     box-sizing: inherit;
+}
+
+a {
+  color: $white;
+  text-decoration: none;
+
+  &:active {
+    color: inherit;
+  }
 }
 
 html {
