--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,9 +12,28 @@
     opacity: 1;
     transform: translateX(0rem); } }
 
+@keyframes expand-in {
+  0% {
+    width: 1%;
+    height: 1%;
+    opacity: 0; }
+  100% {
+    height: 100vh;
+    width: 100%; } }
+
+@keyframes fall-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-20rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem); } }
+
 .btn {
   width: 10rem;
   height: 3rem; }
+  .btn:hover {
+    transform: translate(-50%, -0.5rem); }
   .btn-form {
     position: absolute;
     left: 50%;
@@ -26,8 +45,18 @@
     box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
     margin: 1rem 0rem;
     transition: all 0.3s; }
-    .btn-form:hover {
-      transform: translate(-50%, -0.5rem); }
+  .btn-panel {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 6rem;
+    border: none;
+    border-radius: 5%;
+    color: #FFF;
+    background: linear-gradient(#FE3F03, #811f01);
+    box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+    margin: 1rem 0rem;
+    transition: all 0.3s; }
 
 .App {
   background-color: #FFF;
@@ -53,10 +82,16 @@
   .App .form {
     width: 100%;
     max-width: 50rem;
-    height: 70rem;
+    height: 70vh;
     box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
     position: relative;
     background: #FFF; }
+    @media only screen and (max-width: 75em) {
+      .App .form {
+        max-width: 60rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .App .form {
+        max-width: none; } }
     .App .form-header {
       width: 100%;
       height: 13rem;
@@ -137,6 +172,45 @@
   background: linear-gradient(10deg, #1d3a04, #60BF0C);
   box-shadow: -2px -2px 2px rgba(0, 0, 0, 0.3);
   z-index: 10; }
+  .footer-settings {
+    height: 5rem;
+    width: 5rem;
+    background: #000; }
+    .footer-settings-panel {
+      position: absolute;
+      bottom: 5rem;
+      width: 30rem;
+      height: 35rem;
+      background: #f2f2f2;
+      color: #7D8387; }
+      .footer-settings-panel div.panel-group {
+        margin-top: 2rem;
+        margin-left: 2.5rem; }
+      .footer-settings-panel div.button-group {
+        height: 11rem;
+        width: 90%; }
+        .footer-settings-panel div.button-group input {
+          float: left;
+          clear: left;
+          width: 6rem;
+          height: 2rem;
+          padding-left: 0.5rem;
+          text-align: left;
+          margin: 1px 0rem;
+          color: #60BF0C; }
+        .footer-settings-panel div.button-group:after {
+          content: "";
+          clear: both;
+          display: table; }
+      .footer-settings-panel label {
+        text-align: left;
+        width: 90%;
+        font-size: 2rem;
+        margin: 2px 0px; }
+      .footer-settings-panel input {
+        width: 90%;
+        padding: 0.5rem 0rem;
+        margin-bottom: 1rem; }
 
 .home {
   height: 100vh;
@@ -144,13 +218,18 @@
   background-color: #FFF;
   z-index: 2;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  animation: expand-in 0.6s; }
   .home-form {
     width: 50rem;
+    opacity: 0;
     height: 50rem;
-    margin-top: 15rem;
+    margin-top: 30rem;
     position: relative;
-    filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3)); }
+    filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3));
+    animation: fall-down 0.6s;
+    animation-delay: 0.8s;
+    animation-fill-mode: forwards; }
     .home-form-header {
       width: 100%;
       height: 10rem;
@@ -159,17 +238,53 @@
       justify-content: center;
       align-items: center;
       clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%); }
+      .home-form-header h1 {
+        color: #FFF;
+        font-size: 3.5rem;
+        text-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3); }
     .home-form .option {
-      position: absolute;
-      margin: 4rem 0rem;
-      padding: 2rem 3rem;
-      background-color: #242A33; }
+      height: 12rem;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-wrap: wrap; }
       .home-form .option-1 {
-        left: 3rem; }
+        background: #1F3CBF;
+        padding: 1rem 3rem;
+        border-radius: 3px; }
+        .home-form .option-1 a {
+          color: #FFF;
+          font-size: 1.5rem; }
       .home-form .option-2 {
-        right: 3rem; }
+        background: #FE3F03;
+        padding: 1rem 3rem;
+        border-radius: 3px; }
+        .home-form .option-2 a {
+          color: #FFF;
+          font-size: 1.5rem; }
+      .home-form .option-3 {
+        background: #5C0065;
+        padding: 1rem 3rem;
+        border-radius: 3px; }
+        .home-form .option-3 a {
+          color: #FFF;
+          font-size: 1.5rem; }
   .home a {
     color: #60BF0C; }
+
+.landing {
+  height: 100vh;
+  width: 100%;
+  background-color: #FFF;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .landing-header-img {
+    max-width: 50rem;
+    width: 100%;
+    height: 100%;
+    animation: fall-down 0.4s; }
 
 *,
 *::before,
