--- a/client/src/sass/abstracts/_animation.scss
+++ b/client/src/sass/abstracts/_animation.scss
@@ -17,3 +17,26 @@
     transform: translateX(0rem);
   }
 }
+
+@keyframes expand-in {
+  0% {
+    width: 1%;
+    height: 1%;
+    opacity: 0;
+  }
+  100% {
+    height: 100vh;
+    width: 100%;
+  }
+}
+
+@keyframes fall-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-20rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+}
