--- a/client/src/sass/components/_homepage.scss
+++ b/client/src/sass/components/_homepage.scss
@@ -5,13 +5,18 @@
   z-index: 2;
   display: flex;
   justify-content: center;
+  animation: expand-in 0.6s;
 
   &-form {
     width: 50rem;
+    opacity: 0;
     height: 50rem;
-    margin-top: 15rem;
+    margin-top: 30rem;
     position: relative;
     filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba($black, 0.3));
+    animation: fall-down 0.6s;
+    animation-delay: 0.8s;
+    animation-fill-mode: forwards;
 
     &-header {
       width: 100%;
@@ -21,19 +26,47 @@
       justify-content: center;
       align-items: center;
       clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
+
+      h1 {
+        color: $white;
+        font-size: 3.5rem;
+        text-shadow: 0.5rem 0.5rem 0.5rem rgba($black, 0.3);
+      }
     }
 
     .option {
-      position: absolute;
-      margin: 4rem 0rem;
-      padding: 2rem 3rem;
-      background-color: #242A33;
+      height: 12rem;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-wrap: wrap;
 
       &-1 {
-        left: 3rem;
+        background: #1F3CBF;
+        padding: 1rem 3rem;
+        border-radius: 3px;
+        a {
+          color: $white;
+          font-size: 1.5rem;
+        }
       }
       &-2 {
-        right: 3rem;
+        background: #FE3F03;
+        padding: 1rem 3rem;
+        border-radius: 3px;
+        a {
+          color: $white;
+          font-size: 1.5rem;
+        }
+      }
+      &-3 {
+        background: #5C0065;
+        padding: 1rem 3rem;
+        border-radius: 3px;
+        a {
+          color: $white;
+          font-size: 1.5rem;
+        }
       }
     }
   }
