--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "components/navbar";
 @import "components/footer";
 @import "components/homepage";
+@import "components/landing";
 
 *,
 *::before,
