--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "components/button";
 @import "components/login";
+@import "components/plantomorrow";
 @import "components/navbar";
 @import "components/footer";
 @import "components/homepage";
