--- a/client/src/sass/components/_navbar.scss
+++ b/client/src/sass/components/_navbar.scss
@@ -13,13 +13,20 @@
     margin-top: 1.2rem;
 
     a {
-      font-size: 1.5rem;
+      font-size: 2rem;
       text-shadow: 2px 1px 2px rgba($black, 0.3);
       margin-left: 2rem;
 
       &:active {
         color: inherit;
       }
+    }
+
+    svg {
+      color: $white;
+      font-size: 4rem;
+      float: left;
+      margin-top: -0.7rem;
     }
 
     .float {
