--- a/client/src/sass/components/_plannow.scss
+++ b/client/src/sass/components/_plannow.scss
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 50rem;
   height: 70vh;
+  min-height: 62rem;
   box-shadow: 0.5rem 0.5rem 2rem rgba($black, 0.3);
   position: relative;
   display: block;
