--- a/client/src/sass/components/_login.scss
+++ b/client/src/sass/components/_login.scss
@@ -2,14 +2,22 @@
   background-color: #FFF;
   height: 100vh;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url('./assets/architecture.jpg');
   background-repeat: no-repeat;
   background-position: left center;
-  animation: bckgrnd-slide 120s ease-in infinite;
+  -webkit-animation: bckgrnd-slide 120s ease-in infinite;
+          animation: bckgrnd-slide 120s ease-in infinite;
 
   &:before {
     content: '';
@@ -18,6 +26,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    background-image: -webkit-gradient(linear,left top, right bottom,from($white),to($white));
     background-image: linear-gradient(to bottom right,$white,$white);
     opacity: 0.6;
   }
@@ -26,7 +35,9 @@
     width: 100%;
     max-width: 50rem;
     height: 70vh;
-    box-shadow: 0.5rem 0.5rem 2rem rgba($black, 0.3);
+    min-height: 60rem;
+    -webkit-box-shadow: 0.5rem 0.5rem 2rem rgba($black, 0.3);
+            box-shadow: 0.5rem 0.5rem 2rem rgba($black, 0.3);
     position: relative;
     background: #FFF;
 
@@ -42,16 +53,24 @@
       width: 100%;
       height: 13rem;
       background-color: $primary-lime;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 77%);
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 77%);
+              clip-path: polygon(0 0, 100% 0, 100% 100%, 0 77%);
 
       h1 {
         font-size: 7rem;
         color: $white;
         text-shadow: 0.5rem 0.5rem 0.5rem rgba($black, 0.3);
-        animation: fade-in 0.3s ease;
+        -webkit-animation: fade-in 0.3s ease;
+                animation: fade-in 0.3s ease;
       }
     }
   }
@@ -61,7 +80,8 @@
   }
 
   #simple-form {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin: 0 auto;
     width: 40rem;
 
@@ -98,7 +118,8 @@
       background-color: $primary-lime;
       left: 0%;
       bottom: 0%;
-      clip-path: polygon(0 0, 100% 33%, 100% 100%, 0% 100%);
+      -webkit-clip-path: polygon(0 0, 100% 33%, 100% 100%, 0% 100%);
+              clip-path: polygon(0 0, 100% 33%, 100% 100%, 0% 100%);
     }
   }
 }
