--- a/client/src/sass/components/_plantomorrow.scss
+++ b/client/src/sass/components/_plantomorrow.scss
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 50rem;
   height: 70vh;
+  min-height: 62rem;
   box-shadow: 0.5rem 0.5rem 2rem rgba($black, 0.3);
   position: relative;
   display: block;
@@ -21,6 +22,7 @@
     left: 5%;
     position: relative;
     height: 60vh;
+    min-height: 53rem;
     margin-top: 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -32,6 +34,7 @@
       background: $white;
       width: 100%;
       height: 9vh;
+      min-height: 8rem;
       display: block;
       opacity: 0;
       animation: fall-down 0.6s;
