--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,43 @@
+@-webkit-keyframes bckgrnd-slide {
+  50% {
+    background-position: right center; }
+  100% {
+    background-position: left center; } }
+
 @keyframes bckgrnd-slide {
   50% {
     background-position: right center; }
   100% {
     background-position: left center; } }
 
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem); } }
+
 @keyframes fade-in {
   0% {
     opacity: 0;
-    transform: translateX(5rem); }
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem); }
   100% {
     opacity: 1;
-    transform: translateX(0rem); } }
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem); } }
+
+@-webkit-keyframes expand-in {
+  0% {
+    width: 1%;
+    height: 1%;
+    opacity: 0; }
+  100% {
+    height: 100vh;
+    width: 100%; } }
 
 @keyframes expand-in {
   0% {
@@ -21,41 +48,62 @@
     height: 100vh;
     width: 100%; } }
 
+@-webkit-keyframes fall-down {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20rem);
+            transform: translateY(-20rem); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem); } }
+
 @keyframes fall-down {
   0% {
     opacity: 0;
-    transform: translateY(-20rem); }
+    -webkit-transform: translateY(-20rem);
+            transform: translateY(-20rem); }
   100% {
     opacity: 1;
-    transform: translateY(0rem); } }
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem); } }
 
 .btn {
   width: 10rem;
   height: 3rem; }
   .btn:hover {
-    transform: translate(-50%, -0.5rem); }
+    -webkit-transform: translate(-50%, -0.5rem);
+            transform: translate(-50%, -0.5rem); }
   .btn-form {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     border: none;
     border-radius: 5%;
     color: #FFF;
+    background: -webkit-gradient(linear, left top, left bottom, from(#60BF0C), to(#244704));
     background: linear-gradient(#60BF0C, #244704);
-    box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
     margin: 1rem 0rem;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s; }
   .btn-panel {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     bottom: 6rem;
     border: none;
     border-radius: 5%;
     color: #FFF;
+    background: -webkit-gradient(linear, left top, left bottom, from(#FE3F03), to(#811f01));
     background: linear-gradient(#FE3F03, #811f01);
-    box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.3);
     margin: 1rem 0rem;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s; }
 
 .App {
@@ -165,7 +213,8 @@
   max-width: 50rem;
   height: 70vh;
   min-height: 62rem;
-  box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
   position: relative;
   display: block;
   background: #F5BB00; }
@@ -174,7 +223,8 @@
     margin-top: 1rem;
     color: #FFF;
     text-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
-    animation: fade-in 0.3s ease;
+    -webkit-animation: fade-in 0.3s ease;
+            animation: fade-in 0.3s ease;
     text-align: center; }
   .tomorrowform-data {
     width: 90%;
@@ -183,10 +233,17 @@
     height: 60vh;
     min-height: 53rem;
     margin-top: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style: none; }
     .tomorrowform-data li {
       background: #FFF;
@@ -195,48 +252,93 @@
       min-height: 8rem;
       display: block;
       opacity: 0;
-      animation: fall-down 0.6s;
-      animation-fill-mode: forwards; }
-      .tomorrowform-data li .refresh {
-        width: 9rem;
-        position: relative;
-        height: 100%;
-        background: radial-gradient(#60BF0C, #55a80a);
-        float: right; }
-        .tomorrowform-data li .refresh .spinner {
-          position: absolute;
-          top: -4.25rem;
-          left: 3rem; }
-          @media only screen and (max-width: 56.25em) {
-            .tomorrowform-data li .refresh .spinner {
-              left: 2.5rem;
-              top: -5rem; } }
-          @media only screen and (max-width: 37.5em) {
-            .tomorrowform-data li .refresh .spinner {
-              left: 2rem;
-              top: -9rem; } }
+      -webkit-animation: fall-down 0.6s;
+              animation: fall-down 0.6s;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+      .tomorrowform-data li .inner {
+        width: 100%;
+        height: 9vh;
+        min-height: 8rem;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .tomorrowform-data li .inner-data {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+          .tomorrowform-data li .inner-data-topspan {
+            font-size: 1.7rem;
+            font-weight: 300;
+            height: 2rem;
+            padding: 1rem;
+            width: 100%;
+            border-bottom: 4px solid #5AB20B; }
+          .tomorrowform-data li .inner-data em {
+            margin-left: 0.5rem; }
+        .tomorrowform-data li .inner-refresh {
+          min-width: 9rem;
+          width: 20%;
+          position: relative;
+          height: 100%;
+          background: radial-gradient(#60BF0C, #55a80a);
+          float: right; }
+          .tomorrowform-data li .inner-refresh svg {
+            color: #FFF;
+            font-size: 5rem;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            -webkit-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%); }
+          .tomorrowform-data li .inner-refresh .spinner {
+            position: absolute;
+            top: -4.25rem;
+            left: 3rem; }
+            @media only screen and (max-width: 56.25em) {
+              .tomorrowform-data li .inner-refresh .spinner {
+                left: 2.5rem;
+                top: -5rem; } }
+            @media only screen and (max-width: 37.5em) {
+              .tomorrowform-data li .inner-refresh .spinner {
+                left: 2rem;
+                top: -9rem; } }
 
 #item2 {
-  animation-delay: 0.3s; }
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
 
 #item3 {
-  animation-delay: 0.6s; }
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s; }
 
 #item4 {
-  animation-delay: 0.9s; }
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s; }
 
 #item5 {
-  animation-delay: 1.2s; }
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s; }
 
 #item6 {
-  animation-delay: 1.5s; }
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s; }
 
 .nowform {
   width: 100%;
   max-width: 50rem;
   height: 70vh;
   min-height: 62rem;
-  box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.3);
   position: relative;
   display: block;
   background: #F5BB00; }
@@ -245,7 +347,8 @@
     margin-top: 1rem;
     color: #FFF;
     text-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
-    animation: fade-in 0.3s ease;
+    -webkit-animation: fade-in 0.3s ease;
+            animation: fade-in 0.3s ease;
     text-align: center; }
 
 .navbar {
@@ -254,7 +357,8 @@
   width: 100%;
   height: 5rem;
   background: linear-gradient(10deg, #1d3a04, #60BF0C);
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
   z-index: 10; }
   .navbar-menu {
     margin: 0 auto;
@@ -281,7 +385,8 @@
   width: 100%;
   height: 5rem;
   background: linear-gradient(10deg, #1d3a04, #60BF0C);
-  box-shadow: -2px -2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: -2px -2px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: -2px -2px 2px rgba(0, 0, 0, 0.3);
   z-index: 10; }
   .footer-menu {
     margin: 0 auto;
@@ -355,37 +460,59 @@
   width: 100%;
   background-color: #FFF;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  animation: expand-in 0.6s; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-animation: expand-in 0.6s;
+          animation: expand-in 0.6s; }
   .home-form {
     width: 50rem;
     opacity: 0;
     height: 50rem;
     margin-top: 30rem;
     position: relative;
-    filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3));
-    animation: fall-down 0.6s;
-    animation-delay: 0.8s;
-    animation-fill-mode: forwards; }
+    -webkit-filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3));
+            filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3));
+    -webkit-animation: fall-down 0.6s;
+            animation: fall-down 0.6s;
+    -webkit-animation-delay: 0.8s;
+            animation-delay: 0.8s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards; }
     .home-form-header {
       width: 100%;
       height: 10rem;
       background-color: #5AB20B;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%); }
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
+              clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%); }
       .home-form-header h1 {
         color: #FFF;
         font-size: 3.5rem;
         text-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3); }
     .home-form .option {
       height: 12rem;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-wrap: wrap; }
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
       .home-form .option-1 {
         background: #1F3CBF;
         padding: 1rem 3rem;
@@ -415,14 +542,21 @@
   width: 100%;
   background-color: #FFF;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .landing-header-img {
     max-width: 50rem;
     width: 100%;
     height: 100%;
-    animation: fall-down 0.4s; }
+    -webkit-animation: fall-down 0.4s;
+            animation: fall-down 0.4s; }
 
 .aboutjive {
   height: 100vh;
@@ -433,6 +567,7 @@
     display: grid;
     display: grid;
     grid-template-rows: 5rem 20vh 20vh 20vh 20vh 5rem;
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
     grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
     @media only screen and (max-width: 56.25em) {
       .aboutjive .aboutcontainer {
@@ -440,10 +575,14 @@
     .aboutjive .aboutcontainer-head {
       grid-column: center-start / center-end;
       grid-row: 1 / 3;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
       text-align: center;
-      align-content: center; }
+      -ms-flex-line-pack: center;
+          align-content: center; }
       .aboutjive .aboutcontainer-head h1 {
         width: 100%;
         margin: 2rem 0rem;
@@ -457,7 +596,8 @@
     .aboutjive .aboutcontainer-image {
       grid-column: center-start / col-end 4;
       grid-row: 3 / 5;
-      box-shadow: 3px 3px 0.5rem rgba(0, 0, 0, 0.3);
+      -webkit-box-shadow: 3px 3px 0.5rem rgba(0, 0, 0, 0.3);
+              box-shadow: 3px 3px 0.5rem rgba(0, 0, 0, 0.3);
       margin: 1rem 4rem; }
       @media only screen and (max-width: 56.25em) {
         .aboutjive .aboutcontainer-image {
@@ -478,9 +618,15 @@
     .aboutjive .aboutcontainer-footer-text {
       grid-column: col-start 3 / col-end 4;
       grid-row: 5 / 6;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       border-right: 1px solid #000; }
       @media only screen and (max-width: 56.25em) {
         .aboutjive .aboutcontainer-footer-text {
@@ -491,9 +637,15 @@
     .aboutjive .aboutcontainer-footer-icons {
       grid-column: col-start 5 / center-end;
       grid-row: 5 / 6;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
-      justify-content: center; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
       @media only screen and (max-width: 56.25em) {
         .aboutjive .aboutcontainer-footer-icons {
           grid-row: 6 / 7; } }
@@ -507,7 +659,8 @@
 *::after {
   margin: 0px;
   padding: 0px;
-  box-sizing: inherit; }
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit; }
 
 a {
   color: #FFF;
