--- a/client/src/sass/components/_plantomorrow.scss
+++ b/client/src/sass/components/_plantomorrow.scss
@@ -40,27 +40,67 @@
       animation: fall-down 0.6s;
       animation-fill-mode: forwards;
 
-      .refresh {
-        width: 9rem;
-        position: relative;
-        height: 100%;
-        background: radial-gradient($primary-lime, darken($primary-dark, 2%));
-        float: right;
-        .spinner {
-          position: absolute;
-          top: -4.25rem;
-          left: 3rem;
-          @include respond(tablet) {
-            left: 2.5rem;
-            top: -5rem;
+      .inner {
+        width: 100%;
+        height: 9vh;
+        min-height: 8rem;
+        display: flex;
+        justify-content: center;
+
+        &-data {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          display: flex;
+          flex-wrap: wrap;
+
+          &-topspan {
+            font-size: 1.7rem;
+            font-weight: 300;
+            height: 2rem;
+            padding: 1rem;
+            width: 100%;
+            border-bottom: 4px solid $primary-dark;
           }
-          @include respond(phone) {
-            left: 2rem;
-            top: -9rem;
+          em {
+            margin-left: 0.5rem;
           }
+        }
+
+        &-refresh {
+          min-width: 9rem;
+          width: 20%;
+          position: relative;
+          height: 100%;
+          background: radial-gradient($primary-lime, darken($primary-dark, 2%));
+          float: right;
+
+          svg {
+            color: $white;
+            font-size: 5rem;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+          }
+
+          .spinner {
+            position: absolute;
+            top: -4.25rem;
+            left: 3rem;
+            @include respond(tablet) {
+              left: 2.5rem;
+              top: -5rem;
+            }
+            @include respond(phone) {
+              left: 2rem;
+              top: -9rem;
+            }
+        }
+
+        }
       }
 
-      }
     }
   }
 }
