--- a/client/src/sass/components/_plantomorrow.scss
+++ b/client/src/sass/components/_plantomorrow.scss
@@ -49,6 +49,7 @@
 
         &-data {
           width: 100%;
+          overflow: hidden;
           height: 100%;
           position: relative;
           display: flex;
@@ -56,6 +57,7 @@
 
           &-topspan {
             font-size: 1.7rem;
+            overflow: hidden;
             font-weight: 300;
             height: 2rem;
             padding: 1rem;
