final commit for Sunday

--- a/client/src/sass/components/_plantomorrow.scss
+++ b/client/src/sass/components/_plantomorrow.scss
@@ -58,6 +58,7 @@
           &-topspan {
             font-size: 1.7rem;
             overflow: hidden;
+            line-height: 3rem;
             font-weight: 300;
             height: 2rem;
             padding: 1rem;
