--- a/client/src/index.css
+++ b/client/src/index.css
@@ -268,6 +268,7 @@
                 justify-content: center; }
         .tomorrowform-data li .inner-data {
           width: 100%;
+          overflow: hidden;
           height: 100%;
           position: relative;
           display: -webkit-box;
@@ -277,6 +278,8 @@
               flex-wrap: wrap; }
           .tomorrowform-data li .inner-data-topspan {
             font-size: 1.7rem;
+            overflow: hidden;
+            line-height: 3rem;
             font-weight: 300;
             height: 2rem;
             padding: 1rem;
@@ -350,6 +353,94 @@
     -webkit-animation: fade-in 0.3s ease;
             animation: fade-in 0.3s ease;
     text-align: center; }
+  .nowform-data {
+    width: 90%;
+    left: 5%;
+    position: relative;
+    height: 23vh;
+    min-height: 19rem;
+    margin-top: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    list-style: none; }
+    .nowform-data li {
+      background: #FFF;
+      width: 100%;
+      height: 9vh;
+      min-height: 8rem;
+      display: block;
+      opacity: 0;
+      -webkit-animation: fall-down 0.6s;
+              animation: fall-down 0.6s;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards; }
+      .nowform-data li .inner {
+        width: 100%;
+        height: 9vh;
+        min-height: 8rem;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .nowform-data li .inner-data {
+          width: 100%;
+          overflow: hidden;
+          height: 100%;
+          position: relative;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+          .nowform-data li .inner-data-topspan {
+            font-size: 1.7rem;
+            overflow: hidden;
+            line-height: 3rem;
+            font-weight: 300;
+            height: 2rem;
+            padding: 1rem;
+            width: 100%;
+            border-bottom: 4px solid #5AB20B; }
+          .nowform-data li .inner-data em {
+            margin-left: 0.5rem; }
+        .nowform-data li .inner-refresh {
+          min-width: 9rem;
+          width: 20%;
+          position: relative;
+          height: 100%;
+          background: radial-gradient(#60BF0C, #55a80a);
+          float: right; }
+          .nowform-data li .inner-refresh svg {
+            color: #FFF;
+            font-size: 5rem;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            -webkit-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%); }
+          .nowform-data li .inner-refresh .spinner {
+            position: absolute;
+            top: -4.25rem;
+            left: 3rem; }
+            @media only screen and (max-width: 56.25em) {
+              .nowform-data li .inner-refresh .spinner {
+                left: 2.5rem;
+                top: -5rem; } }
+            @media only screen and (max-width: 37.5em) {
+              .nowform-data li .inner-refresh .spinner {
+                left: 2rem;
+                top: -9rem; } }
 
 .navbar {
   position: absolute;
